frontend/app/src/static/less/typography.less
@import "foundation.less";
@import "icons.less";

/*
<h1 class="main-heading">Typography</h1>

Fonts in use:
* HelveticaNeue-Light
* Helvetica Neue Light
* HelveticaNeueLTStd-Lt
* Helvetica Neue
* Arial
* Helvetica
* sans-serif

(Bold letters use HelveticaNeueLT-Roman instead of HelveticaNeueLTStd-Lt.)
*/

@font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeue',
'Helvetica Neue',  'Segoe UI Light', 'Segoe UI', 'sans-serif-light', 'sans-serif';
@font-family-bold: 'HelveticaNeue', 'Helvetica Neue',  'Segoe UI Bold', 'Segoe UI', 'sans-serif';

@size-font-jumbotron: 59px;
@size-font-large: 48px;
@size-font-not-so-large: 40px;
@size-font-medium-large: 35px;
@size-font-btn: 25px;
@size-font-ingress: 21px;
@size-font-content: 18px;
@size-font-medium: 15px;
@size-font-topheading: 15px;
@size-font-small: 13px;
@line-height-size-font-medium: 18px;

* {
  font-family: @font-family;
  font-weight: 300;
}

html {
  font-size: @size-font-content;
}

/*
Font mixins.
*/
.set-font-bold() {
  font-family: @font-family-bold;
  font-weight: 700;
}

.set-font-jumbotron() {
  font-size: @size-font-jumbotron;
  .set-font-bold;
}

.set-font-large() {
  font-size: @size-font-large;
  .set-font-bold;
}

.text-metadata {
  font-size: @size-font-small;
}

.text-medium {
  font-size: @size-font-medium;
}

/*
******************************************************************
# Headings.
*/

// 1. Most browsers will set default margin-top and -bottom to heading elements.
//    We are using headings up to h4.
h1, h2, h3, h4 {
  margin-top: 0;    // [1]
  margin-bottom: 0; // [1]
  &, span, a > span {
    .set-font-bold;
  }
}

h1 {
  font-size: @size-font-topheading;
}

h2 {
  font-size: @size-font-large;
}

.textgroup-toaster {
  .text-medium();
}

.textgroup-ingress {
  font-size: @size-font-ingress;
  &, span {
    .set-font-bold;
  }
}

/*
******************************************************************
# Texts.
*/

[class^="text-"], [class*=" text-"] {
  .break-words();
  &.emphasis {
    .set-font-bold();
  }
}

.text-highlighted {
  color: @color-text-highlighted;
}

.text-jumbotron {
  .set-font-jumbotron();
}

.text-jumbotron.highlighted {
  color: @color-text-active;
}

.text-heading.highlighted {
  color: @color-text-active;
}

.text-heading.long {
  font-size: @size-font-not-so-large;
}

.text-btn {
  .set-font-bold();
}

/*
Use `.text-details` to separate details from body text.
*/

.text-details {
  font-size: @size-font-small;
  color: @color-text-downplayed;
}

.text-danger {
  color: @color-text-error;
}

.text-error {
  font-size: @size-font-small;
  color: @color-text-error;
}

.text-remove {
  color: @color-text-remove;
}

.text-link {
  display: inline-block;
  line-height: @grid-vertical-half;
}

.text-link.downplayed {
  color: @color-text-downplayed;
}

// 1. Clear line-height for clamped text.
//    NOTE: Tested on iOS Safari. Set .ios override class if needed to set something else as default.
.text-clamped {
  line-height: @grid-vertical-half; // [1]
}

.text-edit {
  display: inline-block;
  font-size: @size-font-small;
  .dont-break-words();
  .set-font-bold();
}

.text-teaser {
  display: inline-block;
  .text-medium();
  color: @color-text-downplayed;
  line-height: @line-height-size-font-medium;
}

// TODO: Use .text-heading-primary and .emphasis which defines .set-font-bold().
.text-heading-primary {
  line-height: @line-height-size-font-medium;
  font-size: @size-font-topheading;
  .set-font-bold();
}

.text-heading-primary.large {
  line-height: @grid-vertical;
  font-size: @size-font-medium-large;
  .set-font-bold();
}

@media (min-width: @min-width-three-column) {
  .text-heading-primary.large {
    font-size: @size-font-large;
  }
}

.text-downplayed {
  color: @color-text-downplayed;
}

/*
Used with JSON.stringify function and HTML <pre> tag.
*/
.text-preformatted {
  margin-top: 0;
  margin-bottom: 0;
  font-size: @size-font-small;
  line-height: normal;
  overflow-x: auto;
  .dont-break-words();
}

/*
Navigation texts
*/

.text-navigation-back,
.text-navigation-forward,
.text-expand,
.text-expand-up,
.text-expand-down,
.text-navigation {
  color: @color-text-downplayed;
  font-size: @size-font-small;
  .set-font-bold();
  display:inherit;
}

.text-navigation {
  .dont-break-words();
}

@width-arrow-text-gap: 5px;
@width-arrow-text-gap-rotated: 15px;
.text-navigation-back:not(.not-swipeable):before {
  .set-icon-font;
  content: @icon-arrow-left;
  color: @color-text-downplayed;
  font-size: @size-icon-arrow-small;
  padding-right: @width-arrow-text-gap;
  vertical-align: middle;
}

.text-navigation-forward:after,
.text-expand-down:after,
.text-expand-up:after {
  .set-icon-font;
  content: @icon-arrow-right;
  color: @color-text-downplayed;
  font-size: @size-icon-arrow-small;
  padding-left: @width-arrow-text-gap;
  vertical-align: middle;
}

.text-navigation-forward.without-text:after, .text-navigation-forward.large:after{
  padding-left: 0;
}

// 1. Clear padding-left, which would otherwise rotate up/down.
// 2. Inline elements can't be transformed, and pseudo elements are inline by default, so must apply
//    display: block or display: inline-block to transform it.
.text-expand-down:after,
.text-expand-up:after {
  padding-left: 0;        // [1]
  display: inline-block;  // [2]
}

.text-expand-down:after {
  padding-bottom: @width-arrow-text-gap-rotated;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.text-expand-up:after {
  padding-top: @width-arrow-text-gap-rotated;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.text-navigation-menu {
  .set-font-bold;
  color: @color-text-inverse;
  font-size: @size-font-large;
}

.text-navigation-menu-small {
  .set-font-bold;
  color: @color-text-inverse;
  font-size: @size-font-topheading;
  line-height: @grid-vertical-half;
}

.large.text-navigation-back:before {
  font-size: @size-icon-arrow-large;
  content: @icon-arrow-left-narrow;
}

.large.text-navigation-forward:after {
  font-size: @size-icon-arrow-large;
  content: @icon-arrow-right-narrow;
  vertical-align: middle;
  vertical-align: -2%;
}

/*
Convert texts.
*/

.text-convert{
  line-height: @grid-vertical;
  min-height: @size-icon-convert;
  height: @grid-vertical;
  display: inline-block;  // for height
  &:before {
    .set-icon-font();
    content: @icon-convert;
    font-size: @size-icon-convert;
    padding-right: @width-arrow-text-gap;
    vertical-align: middle;
  }
}

.text-convert.small {
  font-size: @size-font-small;
}

.text-convert.large {
  min-height: @size-icon-convert-large;
  &:before {
    font-size: @size-icon-convert-large;
  }
}

/*
Keywords
*/

.text-keyword {
  font-size: @size-font-small;
}

/*
Search results (omnibar, deleted)
*/

@line-height-text-search: @grid-vertical-half;

// FIXME: merge with .text-search-result
// 1. Align vertically with .text-search-type, which has different font-size, using same line-height in both
//    classes.
.text-search-result {
  line-height: @line-height-text-search; // [1]
  .text-medium();
}
// 1. Align vertically with .text-search-result, which has different font-size, using same line-height in both
//    classes.
.text-search-type {
  line-height: @line-height-text-search; // [1]
  color: @color-text-downplayed;
  font-size: @size-font-small;
  .set-font-bold();
  // Undo break words
  .dont-break-words();
}

// 1. Set smaller font
// 2. Align with .text-field--title
.text-field {
  // Undo break words
  .dont-break-words();
  .text-field--title {
    font-size: @size-font-small;  // [1]
  }
  .text-field--label {
    padding-top: 11px;    // [2]
    padding-bottom: 11px; // [2]
  }
}

@media (min-width: @min-width-three-column) {
  .container-content--after > .group-symmetrical > .group-symmetrical--right > .text-field--label {
    padding-top: 25px;
    padding-bottom: 0;
  }
}

// FIXME: merge with .text-search-result
.text-field--title {
  line-height: @line-height-text-search; // [1]
  .text-metadata();
  display: block;
}

.text-field--title.small {
  font-size: @size-font-small;
}

.text-field--label-wrapper {
  text-align: center;
  height: inherit;
  display: table-cell;
  vertical-align: middle;
  .text-field--label-bold {
    white-space: pre;
    padding-top: 0;
    padding-bottom: 0;
    line-height: @size-font-small;
    margin-top: 3px;
  }
}
.text-field--label,
.text-field--label-bold {
  font-size: @size-font-small;
  display: block;
  color: @color-text-downplayed;
  font-size: @size-font-small;
  .dont-break-words();
  line-height: 22px;
}
.text-field--label {
  padding-top: 12px;
  padding-bottom: 10px;
}
.text-field--label-bold {
  vertical-align: top;
  .set-font-bold();
  padding-top: 11px;
  padding-bottom: 11px;

}

// 1. Occupy available space.
.text-sort {
  color: white;
  font-size: @size-font-small;
  height: 100%;   // [1]
  display: block; // [1]
}

.text-prefixed--label {
  color: @color-text-downplayed;
  &.large {
    line-height: @grid-vertical;
    font-size: @size-font-medium-large;
  }
}

/*
******************************************************************
# Prefix.
*/

// 1. Set content from data-prefix.
.text-prefix:before {
  content: attr(data-prefix); // [1]
  color: @color-text-downplayed;
}

// 1. Match font-size with .text-agenda--title.
// 2. Match line-height with .text-agenda--title.
//    NOTE: In widgets.less for specificity reasons.
.text-agenda--time {
  color: @color-text-downplayed;
  .text-metadata();                   // [1]
  // line-height: @size-font-content; // [2]
  &.emphasize:first-line {
    color: black;
  }
}

// 1. Match font-size with .text-agenda--time.
// 2. Match line-height with .text-agenda--time.
.text-agenda--title {
  line-height: @size-font-content;  // [1]
  .text-metadata();                 // [2]
}

